--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.5",
+    "sanitize-html": "^2.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
