--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
@@ -22,7 +24,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pm2": "^5.4.3",
-    "razorpay": "^2.9.5",
     "sanitize-html": "^2.13.1"
   },
   "devDependencies": {
